Move files to source folder

--- a/Benchmark results analysis.ipynb
+++ b/Benchmark results analysis.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pandas.read_csv(\"ica_test.csv\",index_col=0,usecols=[1,2,3,4,5,6])"
+    "data = pandas.read_csv(\"source/ica_test.csv\",index_col=0,usecols=[1,2,3,4,5,6])"
    ]
   },
   {
